# Pytest-Synodic

./: README.md  pyproject.toml
pytest_synodic/: plugin.py
