[project]
authors = [
  {name = "Asher Norland", email = "asher.norland@synodic.software"},
]
dependencies = [
  "pytest>=7.4.4",
  "synodic-utilities>=0.1.1.dev5",
]
description = "Synodic Pytest utilities"
license = {text = "MIT"}
name = "pytest-synodic"
readme = "README.md"
requires-python = ">=3.11"

dynamic = ["version"]

[project.urls]
homepage = "https://github.com/Synodic-Software/Pytest-Synodic"
repository = "https://github.com/Synodic-Software/Pytest-Synodic"

[tool.pdm.options]
update = ["--update-all"]

[tool.pdm.version]
source = "scm"

[tool.pdm.dev-dependencies]
lint = [
  "black>= 23.12.1 ",
  "isort>=5.13.2",
  "mypy>=1.8.0 ",
  "pylint>=3.0.3",
]
test = [
  "pytest-cov>=4.1.0",
]

[tool.pdm.scripts]
analyze = {shell = "pylint --verbose pytest_synodic tests"}
format = {shell = "black --check --verbose ."}
lint = {composite = ["analyze", "format", "sort-imports", "type-check"]}
sort-imports = {shell = "isort --check-only --diff --verbose ."}
test = {shell = "pytest --cov=pytest_synodic --verbose tests"}
type-check = {shell = "mypy ."}

[tool.pytest.ini_options]
log_cli = true
testpaths = [
  "tests",
]

[tool.black]
line-length = 120
preview = true

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.mypy]
exclude = "__pypackages__"
plugins = ["pydantic.mypy"]
strict = true

[tool.pylint.MAIN]
load-plugins = [
  "pylint.extensions.code_style",
  "pylint.extensions.typing",
  "pylint.extensions.docstyle",
  "pylint.extensions.docparams",
  "pylint.extensions.private_import",
  "pylint.extensions.bad_builtin",
]

[tool.pylint.format]
max-line-length = "120"

[tool.pylint.parameter_documentation]
accept-no-param-doc = false
accept-no-raise-doc = false
accept-no-return-doc = false
accept-no-yields-doc = false
default-docstring-type = "google"

[tool.coverage.report]
skip_empty = true

[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]
